# TexEmEl

./: .gitignore  .mcp.json  BTML_Refactor.md  CLAUDE.md  LICENSE  README.md  SpecDoc.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.claude/commands/: develosaur-plan.md  develosaur-review.md  develosaur-setup.md  develosaur-sync.md  develosaur-work.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/core/codecs/: CodecRegistry.ts  DocxCodec.ts  EpubCodec.ts  HtmlCodec.ts  MarkdownCodec.ts  OdtCodec.ts  RtfCodec.ts  TxtCodec.ts  setup.ts
src/core/editor/: EditorBridge.ts
src/core/engine/: BlockEngine.ts  BlockId.ts  BlockNode.ts  BlockRegistry.ts  BlockRenderer.ts  CommandHistory.ts  DragManager.ts  EdgeDragManager.ts  EventRouter.ts  ResizeManager.ts  SelectionManager.ts  TextKernel.ts  index.ts  types.ts
src/core/export/: HtmlExporter.ts  MarkdownExporter.ts  RtfExporter.ts  TxtExporter.ts
src/core/layout/: CellDragManager.ts  CellInstance.ts  CellPool.ts  CellRenderer.ts  ContentSplitter.ts  ContentStream.ts  EdgeSplitManager.ts  FlowGraph.ts  InteractionManager.ts  LayoutDirector.ts  LayoutEngine.ts  LayoutReconciler.ts  LayoutTree.ts  NavigationController.ts  OverflowDetector.ts  OverflowResolver.ts  OverflowWatcher.ts  PageModel.ts  SplitResizeManager.ts  StreamLayout.ts  TextKernel.ts  index.ts  types.ts
src/core/model/: BlockId.ts  DocumentTree.ts
(+12 files in other folders)
