[package]
name = "texsaur"
version = "0.1.0"
description = "Universal document editor"
authors = ["TexSaur Contributors"]
edition = "2021"

[lib]
name = "texsaur_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
